[gd_scene load_steps=10 format=3 uid="uid://c30ts5pouv1k0"]

[ext_resource type="Script" uid="uid://b142w22u2o41m" path="res://entities/enemy/enemyManager.gd" id="1_3fvr7"]
[ext_resource type="Script" uid="uid://kufxj2qayes1" path="res://entities/player/components/hitboxComponent.gd" id="1_im2q6"]
[ext_resource type="Script" uid="uid://bumircjejjqi5" path="res://entities/player/components/stat_component.gd" id="2_3fvr7"]
[ext_resource type="Resource" uid="uid://5rmechypsale" path="res://stats/enemies/enemy01.tres" id="4_dt443"]
[ext_resource type="Script" uid="uid://vfldp64b6m6n" path="res://entities/enemy/launch_component.gd" id="5_4wwj3"]
[ext_resource type="Script" uid="uid://ce51hm15vbaey" path="res://entities/enemy/change_authority_component.gd" id="6_d50e0"]

[sub_resource type="CylinderMesh" id="CylinderMesh_tir2s"]
top_radius = 1.0
bottom_radius = 1.0
height = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_dt443"]
size = Vector3(1.9360352, 1, 1.9606628)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_d50e0"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="enemy" type="CharacterBody3D"]
script = ExtResource("1_3fvr7")

[node name="nametag" type="Label3D" parent="."]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9133525, 0)
billboard = 1
alpha_cut = 1
text = "test"

[node name="debugPeer" type="Label3D" parent="."]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1217173, 0)
billboard = 1
alpha_cut = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_tir2s")

[node name="hitboxComponent" type="Area3D" parent="." node_paths=PackedStringArray("stat_component", "launch_component")]
script = ExtResource("1_im2q6")
stat_component = NodePath("../StatComponent")
launch_component = NodePath("../launchComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.021240234, 0, -0.017562866)
shape = SubResource("BoxShape3D_dt443")

[node name="StatComponent" type="Node3D" parent="."]
script = ExtResource("2_3fvr7")
characterSheet = ExtResource("4_dt443")

[node name="launchComponent" type="Node3D" parent="." node_paths=PackedStringArray("owner_body")]
script = ExtResource("5_4wwj3")
owner_body = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.021240234, 0, -0.017562866)
shape = SubResource("BoxShape3D_dt443")

[node name="changeAuthorityComponent" type="Node3D" parent="."]
script = ExtResource("6_d50e0")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_d50e0")

[connection signal="gotHitByPlayer" from="hitboxComponent" to="changeAuthorityComponent" method="_on_hitbox_component_got_hit_by_player"]
